# ReedSolomonPythonExtern

./: CMakeLists.txt  ReedSolomon.kdev4  example.c  pymain.cpp  test.py
.kdev4/: ReedSolomon.kdev4
src/: ecc.h
